@@ -59,6 +59,8 @@
 - Numerous performance improvements. Taskwarrior 2.5.1 is between X% and
   Y% faster than 2.5.0 when running various commands.
 - New formatting specifier 'relative' for columns of Date type was introduced.
+- Fixed bug where 'rc.allow.empty.filter' was not behaving properly (thanks to
+  Scott Kostyshak).
 - Improved OpenBSD support (thanks to Kent R. Spillner).
 
 ------ current release ---------------------------
